fix: background image overflow in mobile view

--- a/style.css
+++ b/style.css
@@ -9,16 +9,18 @@
 	font-weight: 300;
 	overflow-x: hidden;
 }
-:root::before {
-	content: url(rust.png);
+
+body {
+    position: relative;
+    margin:0;
+    overflow-x: hidden; 
+}
+.bg {
 	position: absolute;
 	top: -128px;
 	right: -128px;
-	width: 512px;
-	height: 512px;
 	opacity: 0.25;
 	z-index: -2;
-	display: block;
 	-webkit-transform: rotate(35deg);
 	transform: rotate(35deg);
 }
@@ -35,6 +37,12 @@
 }
 
 @media screen and (max-width: 35em) {
+    .bg {
+        height: 256px;
+        width: 256px;
+        top: -64px;
+        right: -64px;
+    }
     :root { font-size: 16px; }
     .content {
         padding: 1rem 0.5rem;
